<resources>
    <string name="app_name">androidskilltest2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="album_list">Album List</string>
    <string name="search">Search</string>
    <string name="no_results">No Results</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="generic_error">Something went wrong</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="action_register_short">Sign up</string>
    <string name="prompt_name">Name</string>

    <!-- Configuration-->
    <string name="album_url">https://jsonplaceholder.typicode.com</string>
</resources>
